Bug 795803 - Enable ICing of JSNative and PropertyOp getters. (r=jandem)